--- a/index.html
+++ b/index.html
@@ -4,113 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CyberQuest – Game Rules</title>
+    <link rel="icon" type="image/png" href="Logo CYBERQUEST.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="Logo CYBERQUEST.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="Logo CYBERQUEST.png"
+    />
+    <link rel="shortcut icon" href="Logo CYBERQUEST.png" />
 
     <!-- Link to CSS -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
-      <h1 class="title">CyberQuest</h1>
-      <h2 class="title">Official Game Rules</h2>
-
+      <div class="title-row">
+        <img src="./Logo CYBERQUEST.png" class="title-logo" />
+        <h2 class="title subtitle">Official Game Rules</h2>
+      </div>
       <section>
         <h2>🎮 1. Overview</h2>
+        <p>The game is played between 2 to 4 players.</p>
+        <p>A game lasts about 30 minutes.</p>
         <p>
-          CyberQuest is a board game for 2 to 4 players based on cybersecurity
-          quizzes. Each space corresponds to a difficulty level. The goal of the
-          game is to be the first to reach the target score.
+          The player who made the highest score with both dice begins, and then
+          the player to his left continues and so on. The goal being to reach 50
+          points, the players take turns.
         </p>
-        <div class="callout">
-          The game uses three difficulty levels:
-          <span class="badge easy">Easy</span>,
-          <span class="badge medium">Medium</span>,
-          <span class="badge hard">Hard</span>.
-        </div>
-        <h3>⭐ Easy Level</h3>
-        <ul>
-          <li>The game uses only Easy (F) cards.</li>
-          <li>Ideal for learning the rules or playing with beginners.</li>
-          <li>The questions are simple and quick.</li>
-        </ul>
-
-        <h3>⭐⭐ Medium Level</h3>
-        <ul>
-          <li>The game uses Easy (F) + Medium (M) cards.</li>
-          <li>A balanced mix of accessible and more thoughtful questions.</li>
-          <li>Allows a natural progression in difficulty.</li>
-        </ul>
-
-        <h3>⭐⭐⭐ Hard Level</h3>
-        <ul>
-          <li>The game uses only Hard (H) cards.</li>
-          <li>
-            The questions are complex and require reasoning, logic, or advanced
-            knowledge.
-          </li>
-          <li>Designed for experienced players.</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>🧍 2. Number of Players</h2>
-        <p>The game can be played by <strong>2 to 4 players</strong>.</p>
-      </section>
-
-      <section>
-        <h2>🎯 3. Objective</h2>
-        <ul>
-          <li>🎯 Long Game: <strong>50 points</strong></li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>🎲 5. Games Overview</h2>
-        <ul>
-          <li>The player rolls the die.</li>
-          <li>They move their pawn forward.</li>
-          <li>They check the color of the landing space.</li>
-          <li>They draw a quiz card corresponding to the difficulty.</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>🧠 6. Difficulty Levels</h2>
-
-        <table class="difficulty-table">
-          <thead>
-            <tr>
-              <th>Color</th>
-              <th>Level</th>
-              <th>Points Earned</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><span class="badge easy">Green</span></td>
-              <td>Easy</td>
-              <td>+2 points</td>
-            </tr>
-            <tr>
-              <td><span class="badge medium">Orange</span></td>
-              <td>Medium</td>
-              <td>+4 points</td>
-            </tr>
-            <tr>
-              <td><span class="badge hard">Red</span></td>
-              <td>Hard</td>
-              <td>+6 points</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-
-      <section>
-        <h2>🏆 7. End of the Game</h2>
         <p>
-          The first player to reach or exceed the target score wins the game. In
-          case of a tie, a <span class="badge hard">hard</span> quiz question
-          will break the tie.
+          First move : The player rolls two dice and moves his piece to the
+          square. When a player comes across a simple 'Quizz' box, they must
+          scan the QR code of the rules and then scroll down the page to land on
+          'Launch game'. By clicking on it, he will land on a button and will
+          have to click on it so that fate will assign him a random difficulty
+          (between EASY, MEDIUM & HARD).
         </p>
+        <h3>⭐ EASY card</h3>
+        <p>
+          EASY card: if the player answers well to the question, he gains 2
+          points. if the player answers wrong to the question, he does not lose
+          points.
+        </p>
+
+        <h3>⭐⭐ MEDIUM card</h3>
+        <p>
+          MEDIUM card: if the player answers well to the question, he gains 4
+          points. If the player answers wrong to the question, he loses 2
+          points.
+        </p>
+
+        <h3>⭐⭐⭐ HARD card</h3>
+        <p>
+          HARD card: if the player answers well to the question, he gains 6
+          points. if the player answers wrong to the question, he loses 5
+          points.
+        </p>
+        <p>
+          When a player comes across a 'Quizz' box with 'Choose', they will have
+          to choose the level of difficulty they want, then draw a card on the
+          board and respond to it.
+        </p>
+        <p>
+          When a player falls on a BONUS square, they earn 3 points. When a
+          player falls on a MALUS square, they lose 2 points.
+        </p>
+        <p>The first player to reach 50 points wins the game.</p>
       </section>
     </div>
     <div class="start-container">
