ajout des fichier .github/workflows/deploy.yml pour mettre le site en ligne

--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
           points.
         </p>
         <p>
-          When a player comes across a 'Quizz' box with 'Choose', they will have
+          When a player comes across a 'Quiz' box with 'Choose', they will have
           to choose the level of difficulty they want, then draw a card on the
           board and respond to it.
+        </p>
+        <p>
+          When a player falls on the JAIL box, he waits for his turn and stays
+          there until making a 6 with both dice. At each failure, he loses one
+          point.
         </p>
         <p>
           When a player falls on a BONUS square, they earn 3 points. When a
