--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -18,7 +18,7 @@
       href="Logo CYBERQUEST.png"
     />
     <link rel="shortcut icon" href="Logo CYBERQUEST.png" />
-    <link rel="stylesheet" href="scoreBoard.css" />
+    <link rel="stylesheet" href="scoreboard.css" />
   </head>
 
   <body>
