--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h2>🎮 Ready to Play CyberQuest?</h2>
       <p>Click the button below to start the game and access the scoreboard.</p>
 
-      <a href="scoreboard.html" class="start-button">🚀 Launch Game</a>
+      <a href="./scoreboard.html" class="start-button">🚀 Launch Game</a>
     </div>
   </body>
 </html>
