--- a/scoreboard.html
+++ b/scoreboard.html
@@ -117,9 +117,9 @@
             <button class="btn easy-btn" onclick="addPoints(${index}, 2)">+2 (Easy)</button>
             <button class="btn medium-btn" onclick="addPoints(${index}, 4)">+4 (Medium)</button>
             <button class="btn hard-btn" onclick="addPoints(${index}, 6)">+6 (Hard)</button>
-            <button class="btn minus-btn" onclick="removePoints(${index}, 1)">−1</button>
-            <button class="btn minus-btn" onclick="removePoints(${index}, 2)">−2</button>
-            <button class="btn minus-btn" onclick="removePoints(${index}, 5)">−5</button>
+            <button class="btn minus-btn" onclick="removePoints(${index}, 1)">-1</button>
+            <button class="btn minus-btn" onclick="removePoints(${index}, 2)">-2</button>
+            <button class="btn minus-btn" onclick="removePoints(${index}, 5)">-5</button>
             <button class="btn reset-btn" onclick="resetPlayer(${index})">Reset Score</button>
           `;
 
