Add −1 and −5 buttons to scoreboard

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -200,6 +200,7 @@
           rectangle.innerText = "Difficulty will appear here";
         }, 20000);
       });
+      <!-- TEST COMMIT -->
     </script>
   </body>
 </html>
