--- a/scoreboard.html
+++ b/scoreboard.html
@@ -26,7 +26,7 @@
     <div class="container">
       <h1>CyberQuest – Scoreboard</h1>
       <h2>Game Points Manager</h2>
-      <a href="index.html" class="return-button">⬅️ Return to Rules</a>
+      <a href="./index.html" class="return-button">⬅️ Return to Rules</a>
 
       <section class="scoreboard">
         <h2>👥 Player Setup</h2>
