--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
 
       <a href="./scoreboard.html" class="start-button">🚀 Launch Game</a>
     </div>
+    <!-- TEST COMMIT -->
   </body>
 </html>
