--- a/scoreboard.html
+++ b/scoreboard.html
@@ -202,7 +202,7 @@
           rectangle.innerText = "Difficulty will appear here";
         }, 20000);
       });
-      <!-- TEST COMMIT -->
+      <!-- TEST COMMIT -->;
     </script>
   </body>
 </html>
